@@ -1,3 +1,12 @@
+2007-10-16  Alice Liu  <alice.liu@apple.com>
+
+        rubber-stamped by Darin.
+
+        flipping my previous fix around so that mac is special-cased instead of win.
+
+        * dom/Document.cpp:
+        (WebCore::Document::defaultEventHandler):
+
 2007-10-16  David Hyatt  <hyatt@apple.com>
 
         Clean up transform parsing.  Fix a crash, ditch the extra parse context class, and use RefPtr/PassRefPtr more
